--- a/s.html
+++ b/s.html
@@ -210,6 +210,8 @@ float:right;
 </div></div></div></div>
 </body>
 
+<img class="img-side-new" src="https://bestgadgetadvice.com/cam/side.gif"> 
+
 <br><p><u><b>DO YOU WANT TO BE A WEB DESIGN</b></u></p>
 <br>click here
 <a href="https://www.interaction-design.org/courses/gestalt-psychology-and-web-design-the-ultimate-guide/">web disign @saultech</a>
@@ -246,7 +248,11 @@ float:right;
 <br>
 
 <br>
-
+<a target="_blank">
+<img src="https://bestgadgetadvice.com/cam/main.jpg"
+ style="widith:500px;height:500px;">
+ 
+ </a>
 <br>
 <a href="main">PROGRAMMER/DETAILS/PREFEX......."</a >
 
@@ -364,6 +370,9 @@ Read more at:<a href="https://www.wowessays.com/topics/advancement-of-technology
 <br>
 <img src="https://cdn.corporatefinanceinstitute.com/assets/unemployment.jpeg"
  style="widith:750px;height:700px;"> 
+ <img src="https://bestgadgetadvice.com/cam/cam7.jpeg"
+ style="widith:750px;height:700px;"> 
+ 
 
 <font color="orange"><H3> <a>ENTER YOUR DETAILS HERE TO COMPLETE YOUR APPLICATION</a>
   </font color="orange">
